syntax = "proto3";

option csharp_namespace = "Api1.Grpc.Protos";

service Api1GrpcService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc GetProductsForUser(GetProductsForUserRequest) returns (GetProductsForUserResponse);
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  string user_id = 1;
  string name = 2;
  string email = 3;
}

message GetProductsForUserRequest {
  string user_id = 1;
}

message GetProductsForUserResponse {
  repeated ProductResponse products = 1;
}

message ProductResponse {
  string product_id = 1;
  string user_id = 2;
  string name = 3;
  double price = 4;
}